coloquei bordas, margens e fundo image
borders, margin e image

--- a/SWOTv1/index.html
+++ b/SWOTv1/index.html
@@ -15,13 +15,16 @@
   <link rel="stylesheet" href="style.css" />
 
   <body>
-    <h2 class="text">O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h2>
+    <li class="image">
+     <h2 class="text"> O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h2>
+    </li>
     <h3>Nós começaremos a falar sobre o setor Interno.</h3>
     <p2 class="sub-text">
-      Começaremos com o primeiro ponto do setor Interno:
+      E agora começaremos com o primeiro ponto do setor Interno:
     </p2>
-    <h4 class="sub-titulo">Forças :</h4>
-    <p class="text-principal">
+    <h4 class="sub-titulo"> Forças: </h4>
+    <div class="fundo">
+     <p class="text-principal">
       A PepsiCo é uma marca multinacional de renome, é atualmente o líder do
       mercado global, possui poder de dinheiro e marca forte, e um ótimo
       portfólio de produtos diversificados, além de possuir também um portfólio
@@ -32,11 +35,12 @@
       possuir um amplo mix de produtos faz com que ela consiga atingir vários
       mercados e segmentos além de possuir uma Extensa rede de produção global e
       uma Extensa rede de distribuição global.
-    </p>
+     </p>
+    </div>
     <p2 class="sub-text"> Segundo ponto do setor Interno: </p2>
     <h4 class="sub-titulo">FRAQUEZAS</h4>
-
-    <p class="text-principal">
+    <div class="fundo">
+     <p class="text-principal">
       Fraquezas A PepsiCo se mantém como a segunda maior empresa do mercado em
       distribuições de alimentos e bebidas. A empresa tem cerca de 70% de sua
       receita mercadológica dentro da América do Norte e América do Sul,
@@ -44,10 +48,12 @@
       mercado de bebidas e alimentos, a empresa peca na questão de seus produtos
       terem problemas relacionados a grandes quantidades de gorduras e açucares
       para os consumidores que se preocupam com alimentos que fazem bem a saúde.
-    </p>
+     </p>
+    </div>
     <p2 class="sub-text"> Terceiro ponto do setor Externo: </p2>
     <h4 class="sub-titulo">OPORTUNIDADES</h4>
-    <p class="text-principal">
+    <div class="fundo">
+     <p class="text-principal">
       Oportunidades A empresa da PepsiCo tem como estratégia central a
       diversificação do portfólio de seus negócios, como a aquisição de empresas
       complementares, ligadas a outros setores econômicos não ligados à
@@ -58,10 +64,12 @@
       sendo feita, podemos perceber que a PepisCo tem oportunidades
       significativas consolidar seus negócios de foma eficiente e significativa
       ao ponto de suportar altos e baixos dos ciclos econômicos.
-    </p>
+     </p>
+    </div>
     <p2 class="sub-text"> Quarto e último ponto do setor Externo: </p2>
     <h4 class="sub-titulo">AMEAÇAS</h4>
-    <p class="text-principal">
+    <div class="fundo">
+     <p class="text-principal">
       Ameaças Baixa penetração fora do portfólio de negócios das Américas
       Limited Marketing fraco para consumidores preocupados com a saúde. <br />
       A PepsiCo obtém cerca de 70% de suas receitas dos mercados da América do
@@ -75,7 +83,8 @@
       produtos para consumidores preocupados com a saúde. Esse aspecto da
       análise SWOT ressalta as fraquezas que a PepsiCo deve enfrentar por meio
       de mudanças em sua estratégia de crescimento.
-    </p>
-    <p> comço </p>
+     </p>
+    </div>
+    
   </body>
 </html>
