Consegui colocar uma img dde fundo
eu consigui colocar um fundo de imagem no texto principal

--- a/SWOTv1/index.html
+++ b/SWOTv1/index.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" href="style.css" />
 
   <body>
-    <li class="image">
+    <nav class="image">
      <h2 class="text"> O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h2>
-    </li>
+    </nav>
     <h3>Nós começaremos a falar sobre o setor Interno.</h3>
     <p2 class="sub-text">
       E agora começaremos com o primeiro ponto do setor Interno:
