arrumano e colocando alguns ajustes

--- a/SWOTv1/index.html
+++ b/SWOTv1/index.html
@@ -12,25 +12,31 @@
     <title>SWOT</title>
   </head>
   <!--Styles-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Oswald:wght@600&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 
   <body>
     <nav class="image">
-     <h2 class="text"> O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h2>
+     <h1 class="text"> O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h1>
     </nav>
-    <h3>Nós começaremos a falar sobre o setor Interno.</h3>
-    <p2 class="sub-text">
+    <h2>Nós começaremos a falar sobre o setor Interno.</h2>
+    <h4 class="sub-text">
       E agora começaremos com o primeiro ponto do setor Interno:
-    </p2>
-    <h4 class="sub-titulo"> Forças: </h4>
+    </h4>
+    <h3 class="sub-titulo"> FORÇAS: </h3>
     <div class="fundo">
      <p class="text-principal">
-      A PepsiCo é uma marca multinacional de renome, é atualmente o líder do
+      A PepsiCola é uma marca multinacional de renome, é atualmente o líder do
       mercado global, possui poder de dinheiro e marca forte, e um ótimo
       portfólio de produtos diversificados, além de possuir também um portfólio
       de produtos e alimentos saudáveis. Essa diversidade a qual faz sair na
       frente de seus rivais de mercado. Por ser uma empresa global de sucesso, a
-      PepsiCo tem uma das marcas mais fortes do mercado. Essa força permite que
+      PepsiCola tem uma das marcas mais fortes do mercado. Essa força permite que
       a empresa atraia consumidores para seus novos produtos, e o fato de
       possuir um amplo mix de produtos faz com que ela consiga atingir vários
       mercados e segmentos além de possuir uma Extensa rede de produção global e
@@ -38,10 +44,10 @@
      </p>
     </div>
     <p2 class="sub-text"> Segundo ponto do setor Interno: </p2>
-    <h4 class="sub-titulo">FRAQUEZAS</h4>
+    <h3 class="sub-titulo">FRAQUEZAS</h3>
     <div class="fundo">
      <p class="text-principal">
-      Fraquezas A PepsiCo se mantém como a segunda maior empresa do mercado em
+      Fraquezas A PepsiCola se mantém como a segunda maior empresa do mercado em
       distribuições de alimentos e bebidas. A empresa tem cerca de 70% de sua
       receita mercadológica dentro da América do Norte e América do Sul,
       deixando a desejar em um grande continente como a Europa. Operando no
@@ -50,38 +56,39 @@
       para os consumidores que se preocupam com alimentos que fazem bem a saúde.
      </p>
     </div>
-    <p2 class="sub-text"> Terceiro ponto do setor Externo: </p2>
-    <h4 class="sub-titulo">OPORTUNIDADES</h4>
+    <h4>Agora vamos falar sobre os setores externos</h4>
+    <p2 class="sub-text"> Primeiro ponto do setor Externo: </p2>
+    <h3 class="sub-titulo">OPORTUNIDADES</h3>
     <div class="fundo">
      <p class="text-principal">
-      Oportunidades A empresa da PepsiCo tem como estratégia central a
+      Oportunidades A empresa da PepsiCola tem como estratégia central a
       diversificação do portfólio de seus negócios, como a aquisição de empresas
       complementares, ligadas a outros setores econômicos não ligados à
       indústria de alimentos e bebidas. Outro pilar estratégico é aumentar sua
       penetração nos países em desenvolvimento para expandir mais possibilidades
       de mercado nas Américas. A marca pode criar alianças com negócios
       complementares para aumentar sua presença no mercado. Com essa análise
-      sendo feita, podemos perceber que a PepisCo tem oportunidades
-      significativas consolidar seus negócios de foma eficiente e significativa
+      sendo feita, podemos perceber que a PepisCola tem oportunidades
+      significativas consolidar seus negócios de forma eficiente e significativa
       ao ponto de suportar altos e baixos dos ciclos econômicos.
      </p>
     </div>
-    <p2 class="sub-text"> Quarto e último ponto do setor Externo: </p2>
-    <h4 class="sub-titulo">AMEAÇAS</h4>
+    <p2 class="sub-text"> Segundo e último ponto do setor Externo: </p2>
+    <h3 class="sub-titulo">AMEAÇAS</h3>
     <div class="fundo">
      <p class="text-principal">
       Ameaças Baixa penetração fora do portfólio de negócios das Américas
-      Limited Marketing fraco para consumidores preocupados com a saúde. <br />
-      A PepsiCo obtém cerca de 70% de suas receitas dos mercados da América do
+      Limites Marketing fraco para consumidores preocupados com a saúde. <br />
+      A PepsiCola obtém cerca de 70% de suas receitas dos mercados da América do
       Norte e América do Sul. Essa fraqueza indica que a empresa ainda não
       <br />
-      maximizou as receitas potenciais fora das Américas. Além disso, a PepsiCo
+      maximizou as receitas potenciais fora das Américas. Além disso, a PepsiCola
       opera principalmente na indústria de alimentos e bebidas. Isso é uma
       fraqueza porque maximiza a vulnerabilidade da empresa aos riscos no
       mercado de alimentos e bebidas. <br />
-      Além disso, a PepsiCo falha em comercializar efetivamente muitos de seus
+      Além disso, a PepsiCola falha em comercializar efetivamente muitos de seus
       produtos para consumidores preocupados com a saúde. Esse aspecto da
-      análise SWOT ressalta as fraquezas que a PepsiCo deve enfrentar por meio
+      análise SWOT ressalta as fraquezas que a PepsiCola deve enfrentar por meio
       de mudanças em sua estratégia de crescimento.
      </p>
     </div>
