--- a/SWOTv1/index.html
+++ b/SWOTv1/index.html
@@ -14,90 +14,99 @@
 
   <!--Styles-->
   <link rel="stylesheet" href="style.css" />
-  
+
   <body>
     <nav class="image">
-     <h1 class="text"> O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h1>
+      <h1 class="text">O NOSSO TRABALHO É SOBRE A EMPRESA PEPSICOLA</h1>
     </nav>
     <h2>Nós começaremos a falar sobre o setor Interno.</h2>
     <h4 class="sub-text">
       <mark class="color-text2">
         E agora começaremos com o primeiro ponto do setor Interno:
-      </mark>   
-      </h4>
-    <h3 class="sub-titulo"> FORÇAS: </h3>
-    <div class="fundo">
-     <p class="text-principal">
-      <mark class="color-text">
-        A PepsiCola é uma marca multinacional de renome, é atualmente o líder do
-        mercado global, possui poder de dinheiro e marca forte, e um ótimo
-        portfólio de produtos diversificados, além de possuir também um portfólio
-        de produtos e alimentos saudáveis. Essa diversidade a qual faz sair na
-        frente de seus rivais de mercado. Por ser uma empresa global de sucesso, a
-        PepsiCola tem uma das marcas mais fortes do mercado. Essa força permite que
-        a empresa atraia consumidores para seus novos produtos, e o fato de
-        possuir um amplo mix de produtos faz com que ela consiga atingir vários
-        mercados e segmentos além de possuir uma Extensa rede de produção global e
-        uma Extensa rede de distribuição global.
       </mark>
-     </p>
+    </h4>
+    <h3 class="sub-titulo">FORÇAS:</h3>
+    <div class="fundo">
+      <p class="text-principal">
+        <mark class="color-text">
+          A PepsiCola é uma marca multinacional de renome, é atualmente o líder
+          do mercado global, possui poder de dinheiro e marca forte, e um ótimo
+          portfólio de produtos diversificados, além de possuir também um
+          portfólio de produtos e alimentos saudáveis. Essa diversidade a qual
+          faz sair na frente de seus rivais de mercado. Por ser uma empresa
+          global de sucesso, a PepsiCola tem uma das marcas mais fortes do
+          mercado. Essa força permite que a empresa atraia consumidores para
+          seus novos produtos, e o fato de possuir um amplo mix de produtos faz
+          com que ela consiga atingir vários mercados e segmentos além de
+          possuir uma Extensa rede de produção global e uma Extensa rede de
+          distribuição global.
+        </mark>
+      </p>
     </div>
-    <p2 class="sub-text"> <mark class="color-text2">Segundo ponto do setor Interno:</mark> </p2>
+    <p2 class="sub-text">
+      <mark class="color-text2">Segundo ponto do setor Interno:</mark>
+    </p2>
     <h3 class="sub-titulo">FRAQUEZAS</h3>
     <div class="fundo">
-     <p class="text-principal">
-      <mark class="color-text">
-        Fraquezas A PepsiCola se mantém como a segunda maior empresa do mercado em
-        distribuições de alimentos e bebidas. A empresa tem cerca de 70% de sua
-        receita mercadológica dentro da América do Norte e América do Sul,
-        deixando a desejar em um grande continente como a Europa. Operando no
-        mercado de bebidas e alimentos, a empresa peca na questão de seus produtos
-        terem problemas relacionados a grandes quantidades de gorduras e açucares
-        para os consumidores que se preocupam com alimentos que fazem bem a saúde.
-      </mark>
-     </p>
+      <p class="text-principal">
+        <mark class="color-text">
+          Fraquezas A PepsiCola se mantém como a segunda maior empresa do
+          mercado em distribuições de alimentos e bebidas. A empresa tem cerca
+          de 70% de sua receita mercadológica dentro da América do Norte e
+          América do Sul, deixando a desejar em um grande continente como a
+          Europa. Operando no mercado de bebidas e alimentos, a empresa peca na
+          questão de seus produtos terem problemas relacionados a grandes
+          quantidades de gorduras e açucares para os consumidores que se
+          preocupam com alimentos que fazem bem a saúde.
+        </mark>
+      </p>
     </div>
     <h4>Agora vamos falar sobre os setores externos</h4>
-    <p2 class="sub-text"> <mark class="color-text2">Primeiro ponto do setor Externo:</mark> </p2>
+    <p2 class="sub-text">
+      <mark class="color-text2">Primeiro ponto do setor Externo:</mark>
+    </p2>
     <h3 class="sub-titulo">OPORTUNIDADES</h3>
     <div class="fundo">
-     <p class="text-principal">
-      <mark class="color-text">
-        Oportunidades A empresa da PepsiCola tem como estratégia central a
-        diversificação do portfólio de seus negócios, como a aquisição de empresas
-        complementares, ligadas a outros setores econômicos não ligados à
-        indústria de alimentos e bebidas. Outro pilar estratégico é aumentar sua
-        penetração nos países em desenvolvimento para expandir mais possibilidades
-        de mercado nas Américas. A marca pode criar alianças com negócios
-        complementares para aumentar sua presença no mercado. Com essa análise
-        sendo feita, podemos perceber que a PepisCola tem oportunidades
-        significativas consolidar seus negócios de forma eficiente e significativa
-        ao ponto de suportar altos e baixos dos ciclos econômicos.
-      </mark>
-     </p>
+      <p class="text-principal">
+        <mark class="color-text">
+          Oportunidades A empresa da PepsiCola tem como estratégia central a
+          diversificação do portfólio de seus negócios, como a aquisição de
+          empresas complementares, ligadas a outros setores econômicos não
+          ligados à indústria de alimentos e bebidas. Outro pilar estratégico é
+          aumentar sua penetração nos países em desenvolvimento para expandir
+          mais possibilidades de mercado nas Américas. A marca pode criar
+          alianças com negócios complementares para aumentar sua presença no
+          mercado. Com essa análise sendo feita, podemos perceber que a
+          PepisCola tem oportunidades significativas consolidar seus negócios de
+          forma eficiente e significativa ao ponto de suportar altos e baixos
+          dos ciclos econômicos.
+        </mark>
+      </p>
     </div>
-    <p2 class="sub-text"> <mark class="color-text2">Segundo e último ponto do setor Externo: </mark>
+    <p2 class="sub-text">
+      <mark class="color-text2">Segundo e último ponto do setor Externo: </mark>
     </p2>
     <h3 class="sub-titulo">AMEAÇAS</h3>
     <div class="fundo">
-     <p class="text-principal">
-      <mark class="color-text">
-        Ameaças Baixa penetração fora do portfólio de negócios das Américas
-        Limites Marketing fraco para consumidores preocupados com a saúde. <br />
-        A PepsiCola obtém cerca de 70% de suas receitas dos mercados da América do
-        Norte e América do Sul. Essa fraqueza indica que a empresa ainda não
-        <br />
-        maximizou as receitas potenciais fora das Américas. Além disso, a PepsiCola
-        opera principalmente na indústria de alimentos e bebidas. Isso é uma
-        fraqueza porque maximiza a vulnerabilidade da empresa aos riscos no
-        mercado de alimentos e bebidas. <br />
-        Além disso, a PepsiCola falha em comercializar efetivamente muitos de seus
-        produtos para consumidores preocupados com a saúde. Esse aspecto da
-        análise SWOT ressalta as fraquezas que a PepsiCola deve enfrentar por meio
-        de mudanças em sua estratégia de crescimento.
-      </mark>
-     </p>
+      <p class="text-principal">
+        <mark class="color-text">
+          Ameaças Baixa penetração fora do portfólio de negócios das Américas
+          Limites Marketing fraco para consumidores preocupados com a saúde.
+          <br />
+          A PepsiCola obtém cerca de 70% de suas receitas dos mercados da
+          América do Norte e América do Sul. Essa fraqueza indica que a empresa
+          ainda não
+          <br />
+          maximizou as receitas potenciais fora das Américas. Além disso, a
+          PepsiCola opera principalmente na indústria de alimentos e bebidas.
+          Isso é uma fraqueza porque maximiza a vulnerabilidade da empresa aos
+          riscos no mercado de alimentos e bebidas. <br />
+          Além disso, a PepsiCola falha em comercializar efetivamente muitos de
+          seus produtos para consumidores preocupados com a saúde. Esse aspecto
+          da análise SWOT ressalta as fraquezas que a PepsiCola deve enfrentar
+          por meio de mudanças em sua estratégia de crescimento.
+        </mark>
+      </p>
     </div>
-    
   </body>
 </html>
