--- a/SWOTv1/index.html
+++ b/SWOTv1/index.html
@@ -9,7 +9,7 @@
       href="imagens/pepsi.icon.png"
       type="image/x-icon"
     />
-    <title>SWOT</title>
+    <title class="button">SWOT</title>
   </head>
 
   <!--Styles-->
@@ -25,6 +25,9 @@
         E agora começaremos com o primeiro ponto do setor Interno:
       </mark>
     </h4>
+    <div1>
+      <a class href="button"> referencia</a>
+    </div1>
     <h3 class="sub-titulo">FORÇAS:</h3>
     <div class="fundo">
       <p class="text-principal">
@@ -108,5 +111,8 @@
         </mark>
       </p>
     </div>
+    <div2>
+      <a href="button">conclusão</a>
+    </div2>
   </body>
 </html>
